# crm_itr

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
base/: choices.py  models.py  months.py
buildings/: admin.py  models.py
buildings/migrations/: 0001_initial.py
config/: grouped_admin.py  settings.py  urls.py  views.py~  wsgi.py
esc/: admin.py  forms.py  forms.py~  models.py  urls.py  views.py
esc/migrations/: 0001_initial.py
esc/templates/esc/: esc_detail.html~  esc_list.html~  escperlace_form.html~  escproblem_form.html~  escreplace_form.html~
fixture/: all_fixture.py  choices.py
itr/: admin.py  forms.py  models.py  salary.py  urls.py  utils.py~  views.py
itr/excel/: styles.py~
itr/migrations/: 0001_initial.py  0002_initial.py
itr/templates/: calculate_salary.html~  calculate_salary_form.html~
itr/templates/itr/: attendance.html~  calculate_salary.html~  customer_form.html~  customer_list.html~  salary.html~  search_results.html~  vacation_detail.html~  vacation_list.html~  work_schedule.html~  workday_form.html~
itr/templatetags/: custom_filters.py~  days_filters.py~
kp/: admin.py  admin.py~  apps.py  models.py  views.py  views.py~
lifts/: admin.py  apps.py~  forms.py  forms.py~  models.py  seeds.py~  signals.py~  urls.py  views.py  views.py~
lifts/management/commands/: seed_data.py
lifts/migrations/: 0001_initial.py
lifts/templates/: login.html~
lifts/templates/lifts/: base.html~  building_form.html~  buildings_form.html~  elevator_detail.html  problem_detail.html~  problem_form.html~  replacement_form.html  to_form.html~
nginx/: file  nginx.conf~
problems/: admin.py  apps.py  models.py
problems/migrations/: 0001_initial.py
replacements/: admin.py  apps.py  models.py
replacements/migrations/: 0001_initial.py
tos/: admin.py  models.py
tos/migrations/: 0001_initial.py
users/: admin.py  admin.py~  apps.py~  forms.py  models.py  totp_views.py~  urls.py
users/migrations/: 0001_initial.py
users/templates/: setup_totp.html~  verify_totp.html~
users/templates/users/: edit_profile.html~  profile.html~  setup_totp.html~
users/templatetags/: class_filters.py  custom_filters.py~
