[tool.poetry]
name = "noopept"
version = "0.9.0"
description = "Вэб-приложение для начальников участка, электромехаников по лифтам и эскалаторам"
authors = ["Никита Шидогубов <mered1an@live.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
gunicorn = "^23.0.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2025.6"
openpyxl = "^3.1.5"
gevent = "^25.5.1"
pillow = "^11.1.0"
django-otp = "^1.5.4"
qrcode = { extras = ["pil"], version = "^8.0" }
pyotp = "^2.9.0"
lxml = "^6.0.0"
django-cors-headers = "^4.7.0"
django-filter = "^25.1"
cffi = "^2.0.0b1"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
pre-commit = "^4.3.0"
black = "^25.1.0"


[tool.poetry.group.test.dependencies]
pytest-django = "^4.11.1"
pytest = "^8.4.1"

[tool.black]
line-length = 119
extend-exclude = "migrations/"

[tool.ruff]
line-length = 119
exclude = [
    ".git",
    ".gitignore",
    "__pycache__",
    "__init__.py",
    "manage.py",
    "poetry.lock",
    "pyproject.toml",
    "migrations",
    "tests.py",
]
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
ignore = ["E501", "W293"]
select = ["E", "F", "I", "B", "C", "A", "N", "UP"]
mccabe.max-complexity = 12

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"