[project]
name = "itr_crm"
version = "0.10.0"
description = "Вэб-приложение для начальников участка, электромехаников по лифтам и эскалаторам"
readme = "README.md"
authors = ["Никита Шидогубов <mered1an@live.com>"]
requires-python = ">=3.13"
dependencies = [
    "cffi>=2.0.0",
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.6",
    "django-filter>=25.2",
    "django-otp>=1.7.0",
    "gevent>=25.9.1",
    "gunicorn>=25.3.0",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.3",
    "pyotp>=2.9.0",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 119
exclude = [
    ".git",
    ".gitignore",
    "__pycache__",
    "__init__.py",
    "manage.py",
    "pyproject.toml",
    "*/migrations/*",
    "*/tests/*",
]
target-version = "py313"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
ignore = ["E501", "W293"]
select = ["E", "F", "I", "B", "C", "A", "N", "UP"]
mccabe.max-complexity = 12